# corewar

./: Makefile  author
VM/: Makefile  load
VM/includes/: op.h  vm_corewar.h
VM/src/: f_lfork.c  f_live_ld_st.c  f_sti_ldi.c  f_xor.c  func1.c  func2.c  func3.c  func4.c  game.c  main.c  op.c  usage_error.c  visual.c  visual_panel.c  vm_get_champ.c
asm/: 42.s  CMakeLists.txt  Makefile  asm  file  org  t.bash  tasm  test.cor  test.s  zork.s
asm/champs/: Backward.cor  Backward.s  ex.cor  ex.s
asm/champs/examples/: zork.s
asm/includes/: op.h
asm/lib/: Makefile
asm/lib/include/: ft_printf.h  get_next_line.h  libft.h
asm/lib/src/: consist.c  ft_atoi.c  ft_bzero.c  ft_com_denom.c  ft_factorial.c  ft_intsqrt.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprime.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_nextprime.c  ft_printf.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_simple_pow.c  ft_sort_list.c  ft_strcat.c  (+45 more)
asm/src/: bonus.c  check_functions.c  count_all.c  errors.c  get_functions.c  main.c  op.c  parse_commands.c  parse_header.c  push_functions.c  read_binary.c  some_functions_xd.c  write_file.c
asm/testing/: asm  test.bash  test1.bash
asm/testing/champs1/: 42.s  mat.s  tdc3.s
asm/testing/original/: 42  Backward  Car  Octobre_Rouge_V4.2  Survivor  barriere  ex  jumper  lde  mat  maxidef  mortel  slider2  toto
libft/: Makefile  ft_alpha.c  ft_atoi.c  ft_buf.c  ft_bzero.c  ft_fact.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstbackadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstpushback.c  ft_manage.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_numb.c  ft_printf.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_sqrt.c  (+31 more)
vm_champs/: load
vm_champs/champs/: ex.s
